--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: docker.io/library/traefik:v3.5
     container_name: traefik
     env_file:
-      - env/traefik.env
+      - conf/env/traefik.env
     environment:
       - TZ=Europe/Paris
       - NAS_NAME=${MAIN_NAS}
@@ -26,7 +26,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /data/traefik:/data
-      - ./traefik/traefik_dynamic.yaml:/etc/traefik/traefik_dynamic.yaml
+      - ./conf/traefik/traefik_dynamic.yaml:/etc/traefik/traefik_dynamic.yaml
       - logs-traefik:/var/log/traefik
     command:
       - "--api.dashboard=true"
@@ -99,7 +99,7 @@ services:
 
   logrotate:
     container_name: traefik-logrotate
-    image: vegardit/traefik-logrotate:latest
+    image: ghcr.io/vegardit/traefik-logrotate:latest
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:rw # required to send USR1 signal to Traefik after log rotation
       - logs-traefik:/var/log/traefik:rw
@@ -162,7 +162,7 @@ services:
     volumes:
       - /data/speedtest-tracker:/config
     env_file:
-      - env/speedtest-tracker.env
+      - conf/env/speedtest-tracker.env
     environment:
       - TZ=Europe/Paris
       - DISPLAY_TIMEZONE=Europe/Paris
@@ -194,7 +194,6 @@ services:
   netalertx:
     container_name: NetAlertX
     hostname: NetAlertX
-    privileged: true
     image: ghcr.io/jokob-sk/netalertx:latest
     environment:
       - TZ=Europe/Paris
@@ -302,7 +301,7 @@ services:
     environment:
       - LISTEN=45876
     env_file:
-      - env/beszel-agent.env
+      - conf/env/beszel-agent.env
 
   dozzle:
     container_name: dozzle
@@ -404,7 +403,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - whatsupdocker:/store
-      - ./wud/webhook-update.sh:/wud/webhook-update.sh:ro
+      - ./conf/wud/webhook-update.sh:/wud/webhook-update.sh:ro
     healthcheck:
       test: curl --fail http://localhost:3000/health || exit 1 && curl http://localhost:3000/auth/strategies | jq -e '. | length > 0' || exit 1
       interval: 30s
@@ -412,7 +411,7 @@ services:
       retries: 5
       start_period: 10s
     env_file:
-      - env/whats-up-docker.env
+      - conf/env/whats-up-docker.env
     environment:
       - TZ=Europe/Paris
       - WUD_WATCHER_LOCAL_CRON=0 6 * * *
@@ -445,7 +444,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     env_file:
-      - env/monodocker.env
+      - conf/env/monodocker.env
 
   cloudflare-ddns:
     image: timothyjmiller/cloudflare-ddns:latest
@@ -464,7 +463,7 @@ services:
     image: ghcr.io/lifeismana/tailscale-cloudflare-dnssync:main
     container_name: tailscale-cloudflare-dnssync
     env_file:
-      - env/tailscale-cloudflare-dnssync.env
+      - conf/env/tailscale-cloudflare-dnssync.env
     environment:
       - PUID=1000
       - PGID=994
@@ -475,7 +474,7 @@ services:
     container_name: postgres-14
     restart: unless-stopped
     env_file:
-      - env/postgres-14.env
+      - conf/env/postgres-14.env
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       start_period: 20s
@@ -494,7 +493,7 @@ services:
     container_name: postgres
     restart: unless-stopped
     env_file:
-      - env/postgres.env
+      - conf/env/postgres.env
     # ports:
     #   - 127.0.0.1:5432:5432
     healthcheck:
@@ -523,7 +522,7 @@ services:
     ports:
       - 22:22
     env_file:
-      - env/gitea.env
+      - conf/env/gitea.env
     environment:
       - USER_UID=103
       - USER_GID=113
@@ -614,7 +613,7 @@ services:
     user: 1000:1000
     volumes:
       - /data/prometheus:/prometheus
-      - ./prometheus/:/etc/prometheus/
+      - ./conf/prometheus/:/etc/prometheus/
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -676,7 +675,7 @@ services:
       #TODO: add a notification system (maybe ?)
       #- SCRUTINY_NOTIFY_URLS=["http://gotify:80/message?token=a-gotify-token"]
     env_file:
-      - env/scrutiny.env
+      - conf/env/scrutiny.env
     depends_on:
       influxdb:
         condition: service_healthy
@@ -872,7 +871,7 @@ services:
     container_name: zipline
     restart: unless-stopped
     env_file:
-      - env/zipline.env
+      - conf/env/zipline.env
     environment:
       - DATASOURCE_TYPE=s3
       - DATASOURCE_S3_BUCKET=zipline
@@ -897,7 +896,7 @@ services:
     volumes:
       - /data/grist:/persist
     env_file:
-      - env/grist.env
+      - conf/env/grist.env
     environment:
       - TZ=Europe/Paris
       - APP_HOME_URL=https://grist.${MAIN_DOMAIN}
@@ -924,7 +923,7 @@ services:
     container_name: freshrss
     restart: unless-stopped
     env_file:
-      - env/freshrss.env
+      - conf/env/freshrss.env
     environment:
       - TZ=Europe/Paris
       - BASE_URL=freshrss.${MAIN_DOMAIN}
@@ -967,7 +966,7 @@ services:
       retries: 5
       start_period: 30s
     env_file:
-      - env/obsidian-livesync.env
+      - conf/env/obsidian-livesync.env
     restart: unless-stopped
     volumes:
       - /data/obsidian-livesync/data:/opt/couchdb/data
@@ -994,7 +993,7 @@ services:
     container_name: linkwarden
     restart: unless-stopped
     env_file:
-      - env/linkwarden.env
+      - conf/env/linkwarden.env
     environment:
       - TZ=Europe/Paris
       - NEXTAUTH_URL=https://linkwarden.${MAIN_DOMAIN}/api/v1/auth
@@ -1027,7 +1026,7 @@ services:
     container_name: meilisearch
     restart: unless-stopped
     env_file:
-      - env/meilisearch.env
+      - conf/env/meilisearch.env
     labels:
       - wud.tag.include=^v\d+\.\d+.\d+$$
     volumes:
@@ -1046,7 +1045,7 @@ services:
       retries: 5
       start_period: 30s
     env_file:
-      - env/opengist.env
+      - conf/env/opengist.env
     environment:
       - TZ=Europe/Paris
       - OG_OIDC_DISCOVERY_URL=https://authentik.${MAIN_DOMAIN}/application/o/opengist/.well-known/openid-configuration
@@ -1078,7 +1077,7 @@ services:
       retries: 5
       start_period: 30s
     env_file:
-      - env/stirling-pdf.env
+      - conf/env/stirling-pdf.env
     volumes:
       - /data/stirling-pdf/training-data:/usr/share/tessdata
       - /data/stirling-pdf/extra-configs:/configs
@@ -1165,7 +1164,7 @@ services:
     image: quay.io/hedgedoc/hedgedoc:1.10.3
     restart: unless-stopped
     env_file:
-      - env/hedgedoc.env
+      - conf/env/hedgedoc.env
     environment:
       - CMD_DOMAIN=hedgedoc.${MAIN_DOMAIN}
       - CMD_PROTOCOL_USESSL=true
@@ -1205,7 +1204,7 @@ services:
     command: minio server /data --console-address ":9001"
     user: 1000:1000
     env_file:
-      - env/minio.env
+      - conf/env/minio.env
     environment:
       # not quite clear why minio doesn't like MINIO_DOMAIN with traefik
       - MINIO_ENABLE_COMPRESSION=on
@@ -1280,7 +1279,7 @@ services:
       AUTHENTIK_POSTGRESQL__NAME: authentikdb
       AUTHENTIK_COOKIE_DOMAIN: ${MAIN_DOMAIN}
     env_file:
-      - env/authentik.env
+      - conf/env/authentik.env
     volumes:
       - geoip:/geoip
     labels:
@@ -1327,7 +1326,7 @@ services:
       AUTHENTIK_POSTGRESQL__USER: authentik
       AUTHENTIK_POSTGRESQL__NAME: authentikdb
     env_file:
-      - env/authentik.env
+      - conf/env/authentik.env
     volumes:
       - geoip:/geoip
     depends_on:
@@ -1349,7 +1348,7 @@ services:
     volumes:
       - "geoip:/usr/share/GeoIP"
     env_file:
-      - env/geoipupdate.env
+      - conf/env/geoipupdate.env
     environment:
       GEOIPUPDATE_EDITION_IDS: "GeoLite2-City GeoLite2-ASN GeoLite2-Country"
       GEOIPUPDATE_FREQUENCY: "8"
