disable renovate on quadlets

--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,7 @@
     "config:recommended"
   ],
   "ignorePaths": [
-    "docker-compose.yml"
+    "docker-compose.yml",
+    "podman/*.container"
   ]
 }
